<resources>
    <string name="app_name">SWARA-MALA</string>
    <string name="sa_lower">Ṣ</string>
    <string name="ri_lower">R</string>
    <string name="ga_lower">G</string>
    <string name="pa_lower">P</string>
    <string name="dha_lower">D</string>
    <string name="sa_higher">Ṡ</string>
    <string name="select_swarams">Select the swarams you need.</string>
    <string name="selected_swarams">Selected swarams: </string>
    <string name="next_step">Next</string>
    <string name="title_activity_play_swarams">PlaySwaramsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back_button">Back</string>
    <string name="play_all_button">Play</string>
    <string name="stop_button">Stop</string>
</resources>