<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/Theme.AppCompat"
    tools:context=".PlaySwaramsActivity">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/dummy_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/back_button"
                    android:layout_marginHorizontal="10dp"
                    android:padding="5dp"
                    android:background="@drawable/transparent_bg_bordered_button"
                    />

                <Button
                    android:id="@+id/play_all_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/play_all_button"
                    android:layout_marginHorizontal="10dp"
                    android:padding="5dp"
                    android:background="@drawable/transparent_bg_bordered_button"
                    />

                <Button
                    android:id="@+id/stop_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/stop_button"
                    android:layout_marginHorizontal="10dp"
                    android:padding="5dp"
                    android:background="@drawable/transparent_bg_bordered_button"
                    />
            </LinearLayout>
                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.example.swaramala.ExpandableHeightGridView
                        android:id="@+id/playPatternGrid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="6"
                        android:verticalSpacing="10dp"
                        android:horizontalSpacing="10dp"
                        />
                </ScrollView>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

</FrameLayout>